--- a/views/travel_agency/offer_events.ejs
+++ b/views/travel_agency/offer_events.ejs
@@ -26,24 +26,29 @@
             <div class="card-body">
               <form class="form-signin" method="post">
                 <div class="form-label-group my-4">
-                  <input type="text" id="inputTittle" name="inputTittle" class="form-control" placeholder="Name" required>
+                  <input type="text" id="inputTittle" name="inputTittle" class="form-control" placeholder="Tittle" required>
                   <label for="inputTittle">Tittle</label>
                 </div>
 
                 <div class="form-label-group my-4">
-                    <input type="text" id="inputPlace" name="inputPlace" class="form-control" placeholder="Place" required>
-                    <label for="inputPlace">Place</label>
-                  </div>
+                  <input type="text" id="inputAgency" name="inputAgency" class="form-control" placeholder="Agency Name" required>
+                  <label for="inputAgency">Agency Name</label>
+                </div>
 
-                  <div class="form-label-group my-4">
-                      <input type="date" id="inputDate" name="inputDate" class="form-control" placeholder="Email address" required>
-                      <label for="inputDate">Date</label>
-                    </div>
+                <div class="form-label-group my-4">
+                  <input type="text" id="inputPlace" name="inputPlace" class="form-control" placeholder="Place" required>
+                  <label for="inputPlace">Place</label>
+                </div>
 
-                  <div class="form-label-group my-4">
-                    <input type="text" id="inputDuration" name="inputDuration" class="form-control" placeholder="Duration" required>
-                    <label for="inputDuration">Duration</label>
-                  </div>
+                <div class="form-label-group my-4">
+                  <input type="date" id="inputDate" name="inputDate" min="today" class="form-control" placeholder="Email address" required>
+                  <label for="inputDate">Date</label>
+                 </div>
+
+                <div class="form-label-group my-4">
+                  <input type="text" id="inputDuration" name="inputDuration" class="form-control" placeholder="Duration" required>
+                  <label for="inputDuration">Duration</label>
+                </div>
 
                 <div class="form-label-group my-4">
                   <textarea class="form-control" id="inputDescription" name="inputDescription" placeholder="Description" rows="10" required></textarea>
@@ -61,9 +66,8 @@
                 </div>
 
                 <div class="form-label-group my-4">
-                  <input id="inputImage" name="inputImage" class="form-control" type="file">
+                  <input id="inputImage" name="inputImage" class="form-control" type="file" style="height: 65px, width=100px">
                 </div>
-
                 <button class="btn btn-lg btn-block my-4" type="submit">Post</button>
               </form>
             </div>
