--- a/views/freaks/notifications.ejs
+++ b/views/freaks/notifications.ejs
@@ -24,7 +24,7 @@
         <% for(var i=0 ; i < data.length; i++ ) { %>
 
       <div class="alert alert-info">
-        <strong><a href="/events/blog_details">"<%=data[i].name %>"   </a> </strong>&nbsp <%=data.name %> Comment on your post ..
+        <strong><a href="/blog/blog_details/<%=data[i].postid%>">"<%=data[i].name %>"   </a> </strong>&nbsp <%=data.name %> Comment on your post ..
       </div>
     <% } %>
 
