--- a/views/freaks/sidenav.ejs
+++ b/views/freaks/sidenav.ejs
@@ -9,8 +9,8 @@
     <aside class="app-sidebar">
       <div class="app-sidebar__user"><img class="app-sidebar__user-avatar" src="/abc/images/freaks.png" alt="User Image" height="50px" width="50px" style=" border-radius: 50%;">
         <div>
-          <p class="app-sidebar__user-name">Farhan</p>
-          <p class="app-sidebar__user-designation">Freaks</p>
+          <p class="app-sidebar__user-name"><%=user.name%></p>
+          <p class="app-sidebar__user-designation">@<%=user.name%></p>
         </div>
       </div>
       <ul class="app-menu">
@@ -18,8 +18,7 @@
         <li><a class="app-menu__item" href="/freaks/edit_profile"><i class="app-menu__icon fa fa-user"></i><span class="app-menu__label">Edit Profile</span></a></li>
         <li><a class="app-menu__item" href="/freaks/write_blog"><i class="app-menu__icon fa fa-file-text"></i><span class="app-menu__label">Write Blog</span></a></li>
         <li><a class="app-menu__item" href="/freaks/edit_blog"><i class="app-menu__icon fa fa-file-text"></i><span class="app-menu__label">Edit Blog</span></a></li>
-        <li><a class="app-menu__item" href="/freaks/delete_blog"><i class="app-menu__icon fa fa-file-text"></i><span class="app-menu__label">Delete Blog</span></a></li>
-        <li><a class="app-menu__item" href="/freaks/pin_post"><i class="app-menu__icon fa fa-map-pin"></i><span class="app-menu__label">Pin Post</span></a></li>
+        
         <li><a class="app-menu__item" href="/freaks/book_events"><i class="app-menu__icon fa fa-file-text"></i><span class="app-menu__label">Book Events</span></a></li>
         <li><a class="app-menu__item" href="/freaks/history"><i class="app-menu__icon fa fa-file-text"></i><span class="app-menu__label">History</span></a></li>
         <li><a class="app-menu__item" href="/freaks/messages"><i class="app-menu__icon fa fa-inbox"></i><span class="app-menu__label">Messages</span></a></li>
