--- a/views/travel_agency/booking.ejs
+++ b/views/travel_agency/booking.ejs
@@ -42,7 +42,7 @@
                       <td><%=event[i].eventtitle%></td>
                       <td><%=event[i].agencyname%></td>
                       <td><%=event[i].bookedby%></td>
-                      <td><%=event[i].bookedbyname%></td>
+                      <td><%=event[i].bookedby_name%></td>
                       <td><%=event[i].date%></td>
                     </tr>
                   </tbody>
