--- a/views/travel_agency/messages.ejs
+++ b/views/travel_agency/messages.ejs
@@ -1,54 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Messages</title>
-    <link rel="stylesheet" type="text/css" href="/abc/css/travel_agency.css">
+    <title>Message</title>
+    <link rel="stylesheet" type="text/css" href="/abc/css/freaks.css">
     <link rel="stylesheet" type="text/css" href="/abc/css/registration.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body class="app sidebar-mini">
   
-  <% include ../travel_agency/header.ejs %>
+    <% include ../travel_agency/header.ejs %>
 
-  <% include ../travel_agency/sidenav.ejs %>
+    <% include ../travel_agency/sidenav.ejs %>
   
     <main class="app-content">
 
       <div class="app-title">
         <div>
-          <h1>Messages</h1>
+          <h1>Message</h1>
         </div>
       </div>
 
-      
+   
       <div class="row">
         <div class="col-md-12">
           <div class="tile">
             <div class="tile-body">
               <div class="table-responsive">
+                   
                 <table class="table table-hover table-bordered" id="sampleTable">
-                  <thead>
+                      <form class="form-signin" method="post">  
+                 
+            <% for(var i=0 ; i < data.length; i++ ) { %>
+
+              <div class="alert alert-info">
+                <strong><a href="">"<%=data[i].sendername %>" </a> </strong>&nbsp  sent you:&nbsp;  <strong><%=data[i].text%></strong>    
+           &nbsp; &nbsp;  &nbsp; at &nbsp;  <%=data[i].date %>
+            </div>
+            <% } %>
+     
+                          
+                <thead> 
+            
                     <tr>
-                      <th>Name</th>
-                      <th>Messages</th>
-                      <th>Reply</th>
+                      <th>Send Message to</th>
+                      <th> user type   </th>
+                       <th> write message  </th>
+                      <th>  </th>
                     </tr>
                   </thead>
-                  <tbody>
-                    <tr>
-                      <td>Tiger Nixon</td>
-                      <td>System Architect</td>
+                          
+    
+                   
+                <% for(var i=0 ; i < freaks.length; i++ ) { %>
+                      
+                  <tbody>    
+                    
+                      
+                       
+                      <tr>
+                     
+                      <td><%=freaks[i].name%></td>
+                      <td> <%=freaks[i].user_type%></td>
+                       <td> <input type="text" id="reciver" name="reciver"> </td> 
                       <td>
-                        <a href="/travel_agency"> <button class="btn btn-lg btn-block" type="submit">Edit</button></a>
+                        <input type="hidden" name="rmail" value="<%=freaks[i].email%>">
+                        <a href="/freaks/messages/<%=freaks[i].email%>/name"> <button class="btn btn-lg btn-block" type="submit" value="submit">send message </button></a>
+                          
                       </td>
+                          
+                     </from>
+                        
                     </tr>
+                      
                   </tbody>
+                <% }%>
+                    
                 </table>
+                 
+                  
               </div>
             </div>
           </div>
         </div>
       </div>
+
+
+
     </main>
     <script src="/abc/js/jquery-3.3.1.min.js"></script>
     <script src="/abc/js/popper.min.js"></script>
