--- a/views/travel_agency/sidenav.ejs
+++ b/views/travel_agency/sidenav.ejs
@@ -20,6 +20,7 @@
         <li><a class="app-menu__item" href="/travel_agency/edit_events"><i class="app-menu__icon fa fa-file-text"></i><span class="app-menu__label">Edit Events</span></a></li>
         <li><a class="app-menu__item" href="/travel_agency/delete_events"><i class="app-menu__icon fa fa-file-text"></i><span class="app-menu__label">Delete Events</span></a></li>
         <li><a class="app-menu__item" href="/travel_agency/history"><i class="app-menu__icon fa fa-file-text"></i><span class="app-menu__label">History</span></a></li>
+        <li><a class="app-menu__item" href="/travel_agency/booking"><i class="app-menu__icon fa fa-file-text"></i><span class="app-menu__label">Booked Events</span></a></li>
         <li><a class="app-menu__item" href="/travel_agency/messages"><i class="app-menu__icon fa fa-inbox"></i><span class="app-menu__label">Messages</span></a></li>
         <li><a class="app-menu__item" href="/travel_agency/notifications"><i class="app-menu__icon fa fa-bell"></i><span class="app-menu__label">Notifications</span></a></li>
       </ul>
