--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -43,7 +43,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--//skycons-icons-->
 </head>
 <body class="app sidebar-mini">	
+	<% include ../admin/header.ejs %>
 
+	<% include ../admin/sidenav.ejs %>
+	
 		<main class="app-content">
 
 				<div class="app-title">
@@ -58,7 +61,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
    <div class="left-content col-md-12">
 	   <div class="mother-grid-inner">
             <!--header start here-->
-				<% include header.ejs %>
+			
 <!--heder end here-->
 <!-- script-for sticky-nav -->
 		<script>
@@ -84,8 +87,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="market-update-block clr-block-1">
 					<div class="col-md-8 market-update-left">
 						<h3><%= result.id %></h3>
-						<h4>Registered User</h4>
-						<p>Other hand, we denounce</p>
+						<h4>Registered User(s)</h4>
+						<p></p>
 					</div>
 					<div class="col-md-4 market-update-right">
 						<i class="fa fa-file-text-o"> </i>
@@ -98,8 +101,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="market-update-block clr-block-3">
 					<div class="col-md-8 market-update-left">
 						<h3><%= result2.id %></h3>
-						<h4>Messages</h4>
-						<p>Other hand, we denounce</p>
+						<h4>Message(s)</h4>
+						<p>A messeging service developed by Traveler'S.</p>
 					</div>
 					<div class="col-md-4 market-update-right">
 						<i class="fa fa-envelope-o"> </i>
@@ -154,6 +157,53 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="clearfix"> </div>
+			<div class="col-md-6 chart-blo-1">
+					<div class="chart-other">
+						<h3>Users</h3> 		
+						<canvas id="userspie" height="315" width="470" style="width: 470px; height: 315px;"></canvas>
+										Freaks = Blue <br/> Agencies = Orange
+										
+										<script>
+											var pieData = [
+												{
+													value: '<%= result3.id %>',
+													color:"#337AB7"
+												},
+												{
+													value : '<%= result4.id %>',
+													color : "#FC8213"
+												},
+											
+											];
+											new Chart(document.getElementById("userspie").getContext("2d")).Pie(pieData);
+										</script>
+					</div>
+				</div>
+				<div class="clearfix"> </div>
+				<div class="col-md-6 chart-blo-2">
+						<div class="chart-other">
+							<h3>Published</h3> 		
+							<canvas id="publishedpie" height="315" width="470" style="width: 470px; height: 315px;"></canvas>
+							Events = Orange <br/> Blogs = Blue
+											
+											<script>
+												var pieData = [
+													{
+														value: '<%= result5.id %>',
+														color:"#337AB7"
+													},
+													{
+														value : '<%= result6.id %>',
+														color : "#FC8213"
+													},
+												
+												];
+												new Chart(document.getElementById("publishedpie").getContext("2d")).Pie(pieData);
+											</script>
+						</div>
+					</div>
+					<div class="clearfix"> </div>
+				
 	
 			
 	
