--- a/views/common/user_header.ejs
+++ b/views/common/user_header.ejs
@@ -12,9 +12,9 @@
             <li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
             <li class="nav-item"><a class="nav-link" href="/events">Events</a></li>
             <li class="nav-item dropdown submenu">
-              <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%=name%></a>
+              <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%=user.name%></a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li class="nav-item"><a class="nav-link" href="">Profile</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/home/Profile">Profile</a></li>
                   <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
                 </ul>
             </li>
