--- a/views/events/event_details.ejs
+++ b/views/events/event_details.ejs
@@ -8,15 +8,15 @@
 </head>
 <body>
 
-    <% if (user.login=="true") { %>
-        <% if(user.user_type=="Admin") {%>
-            <% include ../common/adminheader.ejs %>
-            <% } else { %>
-                <% include ../common/user_header.ejs %>
-            <% } %>
-    <% } else { %>
-    <% include ../common/header.ejs %>
-    <% } %>
+   <!--    header selected -->
+   
+    <% if(user.login == " "){ %>
+           <% include ../common/header.ejs %>
+   <% } else {%>
+            <% include ../common/user_header.ejs %>
+      <%} %>
+     
+
     <div id="wrapper">
         <div class="section">
             <div class="container">
@@ -41,7 +41,7 @@
                                 </div>
 
                                 <div class="col-md-12 text-center">
-                                    <a href="/events/book_now"><input type="submit" value="Book Now" class="btn btn-primary" /></a>
+                                    <a href="/events/book_now/<%=events.id %>"><input type="submit" value="Book Now" class="btn btn-primary" /></a>
                                 </div>
                             </div>
                         </div>
@@ -51,8 +51,7 @@
                             <div class="col-md-12 text-center wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
                                 <div class="portfolio-share">
                                     <ul class="list-inline">
-                                        <li><a href=""><i class="fab fa-facebook-f"></i> Like it</a></li>
-                                        <li><a href=""><i class="far fa-save"></i></i> Pin it</a></li>
+                                        <li><a href="/events/report/<%=events.id %>"><i class="far fa-save"></i>REPORT TO ADMIN</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -60,100 +59,7 @@
 
                         
 
-                        <hr class="invis">
-
-                        <div class="comment-widget clearfix">
-                            <div class="contact-widget">
-                                <h4>5 Comments</h4>
-                                <hr>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="panel panel-info">
-                                        <div class="panel-body comments">
-
-                                            <ul class="media-list">
-                                                <li class="media">
-                                                    <div class="comment">
-                                                        <a href="" class="pull-left">
-                                                            <img src="/abc/images/team_01.jpg" alt="" class="img-circle">
-                                                        </a>
-                                                        <div class="media-body">
-                                                            <strong class="text">Jane Doe</strong>
-                                                            <span class="text-muted">
-                                                                                                <small class="text-muted">6 days ago</small></span>
-                                                            <p>
-                                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, <a href="#">#some link </a>.
-                                                            </p>
-                                                        </div>
-                                                        <div class="clearfix"></div>
-                                                    </div>
-                                                </li>
-                                                <li class="media">
-                                                    <div class="comment">
-                                                        <a href="#" class="pull-left">
-                                                            <img src="/abc/images/team_03.jpg" alt="" class="img-circle">
-                                                        </a>
-                                                        <div class="media-body">
-                                                            <strong class="text">Jana Cova</strong>
-                                                            <span class="text-muted">
-                                                                                                <small class="text-muted">12 days ago</small></span>
-                                                            <p>
-                                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet.
-                                                            </p>
-                                                        </div>
-                                                        <div class="clearfix"></div>
-                                                    </div>
-                                                </li>
-                                                <li class="media">
-                                                    <div class="comment">
-                                                        <a href="#" class="pull-left">
-                                                            <img src="/abc/images/team_02.jpg" alt="" class="img-circle">
-                                                        </a>
-                                                        <div class="media-body">
-                                                            <strong class="text">Johnatan Smarty</strong>
-                                                            <span class="text-muted">
-                                                                                                <small class="text-muted">1 month ago</small></span>
-                                                            <p>
-                                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
-                                                            </p>
-                                                        </div>
-                                                        <div class="clearfix"></div>
-                                                    </div>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <hr class="invis">
-
-                        <div class="comment-widget clearfix">
-                            <div class="contact-widget">
-                                <h4>Leave a Comment</h4>
-                                <hr>
-                            </div>
-
-                            <div class="contact_form comment-form">
-                                <form class="row">
-                                    <div class="col-md-12 col-sm-12">
-                                        <label>Comment <span class="required"></span></label>
-                                        <textarea class="form-control" placeholder=""></textarea>
-                                    </div>
-                                    <div class="col-md-12 col-sm-12">
-                                        <input type="submit" value="Send Comment" class="btn btn-primary" />
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+                        
 
     <script src="/abc/js/all.js"></script>
 </body>
