--- a/views/travel_agency/notifications.ejs
+++ b/views/travel_agency/notifications.ejs
@@ -30,7 +30,7 @@
       <% for(var i=0 ; i < data.length; i++ ) { %>
 
       <div class="alert alert-danger">
-        <strong>"<%=data[i].title%>"</strong>&nbsp event post is declined by admin.
+        <strong>"<%=data[i].title%>"</strong>&nbsp event post is declined/deleted.
       </div>
       <% } %>
 
